clusters/sirius/apps/html-share/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: html-share
spec:
  replicas: 1
  selector:
    matchLabels:
      app: html-share
  template:
    metadata:
      labels:
        app: html-share
    spec:
      containers:
        - name: nginx
          image: nginx:alpine
          ports:
            - containerPort: 80
              name: http
          volumeMounts:
            - name: config
              mountPath: /etc/nginx/conf.d/default.conf
              subPath: nginx.conf
            - name: html-files
              mountPath: /data
              readOnly: true
      volumes:
        - name: config
          configMap:
            name: html-share-config
        - name: html-files
          nfs:
            server: 192.168.1.10
            path: /mnt/primary/root/downloads/misc
            readOnly: true
