clusters/sirius/apps/html-share/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: html-share
spec:
  selector:
    app: html-share
  ports:
    - name: http
      port: 80
      targetPort: http
